--- a/shard.yml
+++ b/shard.yml
@@ -11,7 +11,7 @@ targets:
     main: src/cli.cr
 
 scripts:
-  postinstall: shards build --no-debug
+  postinstall: shards build --no-debug && mkdir -p ../../bin && cp ./bin/ameba ../../bin/
 
 # https://github.com/crystal-lang/shards/pull/126
 executables:
